Fix intersection for set